--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
                         </li>
                         <li class="card">
                             <img src="./images/vanoise.jpg" class="card__image"/>
+                            <div class="card__description">
                             <h2 class="card__title">Vanoise National Park</h2>
                             <button class="card__like-button"></button>
+                            </div>
                         </li>
                         <li class="card">
                             <img src="./images/lago.jpg" class="card__image"/>
