--- a/index.html
+++ b/index.html
@@ -17,48 +17,49 @@
                 <div class="header__line"></div>
                 <img src="./images/jacques-cousteau (1).jpg" alt="avatar" class="profile__picture"/>
                 <div class="profile__info">
-                    <h1 class="profile__title">Jacques Cousteau</h1>
+                    <h1 class="profile__title">Jacques Cousteau
                     <button class="profile__edit-button"></button>
+                    <button class="profile__plus-button"></button></h1>
                     <p class="profile__description">Explorer</p>
-                    <button class="profile__plus-button"></button>
+                    
                 </div>
+            </section>
                 <section class="cards">
                     <ul class="card__list">
                         <li class="card">
                             <img src="./images/yosemite.jpg" class="card__image"/>
-                                <h2 class="card__title">Yosemite Valley</h2>
-                                <button class="card__like-button"></button>
+                                <h2 class="card__title">Yosemite Valley
+                                <button class="card__like-button"></button></h2>
                         </li>
                         <li class="card">
                             <img src="./images/lake-louise.jpg" class="card__image"/>
-                            <h2 class="card__title">Lake Louise</h2>
-                            <button class="card__like-button"></button>
+                            <h2 class="card__title">Lake Louise
+                            <button class="card__like-button"></button></h2>
                         </li>
                         <li class="card">
                             <img src="./images/bald-mountains.jpg" class="card__image"/>
-                            <h2 class="card__title">Bald Mountains</h2>
-                            <button class="card__like-button"></button>
+                            <h2 class="card__title">Bald Mountains
+                            <button class="card__like-button"></button></h2>
                         </li>
                         <li class="card">
                             <img src="./images/latemar.jpg" class="card__image"/>
-                            <h2 class="card__title">Latemar</h2>
-                            <button class="card__like-button"></button>
+                            <h2 class="card__title">Latemar
+                            <button class="card__like-button"></button></h2>
                         </li>
                         <li class="card">
                             <img src="./images/vanoise.jpg" class="card__image"/>
                             <div class="card__description">
-                            <h2 class="card__title">Vanoise National Park</h2>
-                            <button class="card__like-button"></button>
+                            <h2 class="card__title">Vanoise National Park
+                            <button class="card__like-button"></button></h2>
                             </div>
                         </li>
                         <li class="card">
                             <img src="./images/lago.jpg" class="card__image"/>
-                            <h2 class="card__title">Lago di Braies</h2>
-                            <button class="card__like-button"></button>
+                            <h2 class="card__title">Lago di Braies
+                            <button class="card__like-button"></button></h2>
                         </li>
                     </ul>
                 </section>
-            </section>
         </main>
             <footer class="footer">
                 <p class="footer__copyright">&#169;2022 Around The U.S.</p>
