--- a/index.html
+++ b/index.html
@@ -10,19 +10,22 @@
   <body class="page">
     <div class="page__content">
       <header class="header">
+        <div class="header__image-container">
         <img src="./images/Vector (1).svg" class="header__image" alt="Around the U.S. logo"/>
+        </div>
       </header>
         <main class="content">
             <section class="profile page__section">
-                <div class="header__line"></div>
+               <!--<div class="header__line"></div>-->
                 <img src="./images/jacques-cousteau (1).jpg" alt="avatar" class="profile__picture"/>
                 <div class="profile__info">
-                    <h1 class="profile__title">Jacques Cousteau
+                    <div class="profile__title-container">
+                    <h1 class="profile__title">Jacques Cousteau</h1>
                     <button class="profile__edit-button"></button>
-                    <button class="profile__plus-button"></button></h1>
-                    <p class="profile__description">Explorer</p>
-                    
+                    </div>
+                    <p class="profile__description">Explorer</p>                        
                 </div>
+                <button class="profile__plus-button"></button>
             </section>
                 <section class="cards">
                     <ul class="card__list">
