--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="header__image-container">
         <header class="header">
           <img
-            src="./images/Vector (1).svg"
+            src="./images/Vector(1).svg"
             class="header__image"
             alt="Around the U.S. logo"
           />
@@ -22,7 +22,7 @@
     <main class="content">
       <section class="profile page__section">
         <img
-          src="./images/jacques-cousteau (1).jpg"
+          src="./images/jacques-cousteau(1).jpg"
           alt="avatar"
           class="profile__picture"
         />
@@ -55,9 +55,10 @@
               class="card__image"
               alt="yosemite"
             />
-            <h2 class="card__title">
-              Yosemite Valley <button class="card__like-button"></button>
-            </h2>
+            <div class="card__description">
+              <h2 class="card__title">Yosemite Valley</h2>
+              <button class="card__like-button"></button>
+            </div>
           </li>
           <li class="card">
             <img
@@ -65,9 +66,10 @@
               class="card__image"
               alt="lakelouise"
             />
-            <h2 class="card__title">
-              Lake Louise <button class="card__like-button"></button>
-            </h2>
+            <div class="card__description">
+              <h2 class="card__title">Lake Louise</h2>
+              <button class="card__like-button"></button>
+            </div>
           </li>
           <li class="card">
             <img
@@ -75,30 +77,31 @@
               class="card__image"
               alt="baldmountains"
             />
-            <h2 class="card__title">
-              Bald Mountains <button class="card__like-button"></button>
-            </h2>
+            <div class="card__description">
+              <h2 class="card__title">Bald Mountains</h2>
+              <button class="card__like-button"></button>
+            </div>
           </li>
           <li class="card">
             <img src="./images/latemar.jpg" class="card__image" alt="latemar" />
-            <h2 class="card__title">
-              Latemar <button class="card__like-button"></button>
-            </h2>
+            <div class="card__description">
+              <h2 class="card__title">Latemar</h2>
+              <button class="card__like-button"></button>
+            </div>
           </li>
           <li class="card">
             <img src="./images/vanoise.jpg" class="card__image" alt="vanoise" />
             <div class="card__description">
-              <h2 class="card__title">
-                Vanoise National Park
-                <button class="card__like-button"></button>
-              </h2>
+              <h2 class="card__title">Vanoise National Park</h2>
+              <button class="card__like-button"></button>
             </div>
           </li>
           <li class="card">
             <img src="./images/lago.jpg" class="card__image" alt="lago" />
-            <h2 class="card__title">
-              Lago di Braies <button class="card__like-button"></button>
-            </h2>
+            <div class="card__description">
+              <h2 class="card__title">Lago di Braies</h2>
+              <button class="card__like-button"></button>
+            </div>
           </li>
         </ul>
       </section>
