--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             class="header__image"
             alt="Around the U.S. logo"
           />
+          <div class="header__line"></div>
         </header>
       </div>
     </div>
@@ -38,17 +39,17 @@
             </button>
           </div>
           <p class="profile__description">Explorer</p>
+          <button class="profile__add-button" type="submit">
+            <img
+              class="profile__add-button-icon"
+              src="./images/plus.svg"
+              alt="add button"
+            />
+          </button>
         </div>
-        <button class="profile__add-button" type="submit">
-          <img
-            class="profile__add-button-icon"
-            src="./images/plus.svg"
-            alt="add button"
-          />
-        </button>
       </section>
       <section class="cards">
-        <ul class="card__list">
+        <ul class="cards__list">
           <li class="card">
             <img
               src="./images/yosemite.jpg"
