--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
   </head>
   <body class="page">
     <div class="page__content">
-      <div class="header__image-container">
-        <header class="header">
-          <img
-            src="./images/Vector(1).svg"
-            class="header__image"
-            alt="Around the U.S. logo"
-          />
-        </header>
-        <div class="header__line"></div>
-      </div>
+      <header class="header page-section">
+        <img
+          src="./images/Vector(1).svg"
+          class="logo header__logo"
+          alt="Around the U.S. logo"
+        />
+      </header>
     </div>
     <main class="content">
       <section class="profile page__section">
@@ -28,17 +25,9 @@
           class="profile__picture"
         />
         <div class="profile__info">
-          <div class="profile__title-container">
-            <h1 class="profile__title">Jacques Cousteau</h1>
-            <button class="profile__edit-button" type="submit">
-              <img
-                class="profile__edit-button-icon"
-                src="./images/edit-button.svg"
-                alt="edit button"
-              />
-            </button>
-            <p class="profile__description">Explorer</p>
-          </div>
+          <h1 class="profile__title">Jacques Cousteau</h1>
+          <button class="profile__edit-button" type="submit"></button>
+          <p class="profile__description">Explorer</p>
         </div>
         <button class="profile__add-button" type="submit">
           <img
