--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="page">
     <div class="page__content">
-      <header class="header page-section">
+      <header class="header">
         <img
           src="./images/Vector(1).svg"
           class="logo header__logo"
