--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         />
         <div class="profile__info">
           <h1 class="profile__title">Jacques Cousteau</h1>
-          <button class="profile__edit-button" type="submit"></button>
+          <button class="profile__edit-button" type="button"></button>
           <p class="profile__description">Explorer</p>
         </div>
-        <button class="profile__add-button" type="submit">
+        <button class="profile__add-button" type="button">
           <img
             class="profile__add-button-icon"
             src="./images/plus.svg"
@@ -47,7 +47,7 @@
             />
             <div class="card__description">
               <h2 class="card__title">Yosemite Valley</h2>
-              <button class="card__like-button"></button>
+              <button class="card__like-button" type="button"></button>
             </div>
           </li>
           <li class="card">
