--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             />
             <div class="card__description">
               <h2 class="card__title">Lake Louise</h2>
-              <button class="card__like-button"></button>
+              <button class="card__like-button" type="button"></button>
             </div>
           </li>
           <li class="card">
@@ -69,28 +69,28 @@
             />
             <div class="card__description">
               <h2 class="card__title">Bald Mountains</h2>
-              <button class="card__like-button"></button>
+              <button class="card__like-button" type="button"></button>
             </div>
           </li>
           <li class="card">
             <img src="./images/latemar.jpg" class="card__image" alt="latemar" />
             <div class="card__description">
               <h2 class="card__title">Latemar</h2>
-              <button class="card__like-button"></button>
+              <button class="card__like-button" type="button"></button>
             </div>
           </li>
           <li class="card">
             <img src="./images/vanoise.jpg" class="card__image" alt="vanoise" />
             <div class="card__description">
               <h2 class="card__title">Vanoise National Park</h2>
-              <button class="card__like-button"></button>
+              <button class="card__like-button" type="button"></button>
             </div>
           </li>
           <li class="card">
             <img src="./images/lago.jpg" class="card__image" alt="lago" />
             <div class="card__description">
               <h2 class="card__title">Lago di Braies</h2>
-              <button class="card__like-button"></button>
+              <button class="card__like-button" type="button"></button>
             </div>
           </li>
         </ul>
