--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </section>
     </main>
     <footer class="footer">
-      <p class="footer__copyright page__section">&#169;2022 Around The U.S.</p>
+      <p class="footer__copyright">&#169;2022 Around The U.S.</p>
     </footer>
   </body>
 </html>
