--- a/index.html
+++ b/index.html
@@ -99,5 +99,6 @@
     <footer class="footer">
       <p class="footer__copyright">&#169;2022 Around The U.S.</p>
     </footer>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
