--- a/index.html
+++ b/index.html
@@ -105,10 +105,21 @@
         <button class="modal__close"></button>
         <p class="modal__heading">Edit Profile</p>
         <form class="modal__form">
-          <input type="text" name="title" />
-          <input type="description" />
-          <button class="modal__button">Save</button>
+          <input
+            type="text"
+            name="title"
+            class="modal__input"
+            placeholder="Jacques Cousteau"
+            id="name"
+          />
+          <input
+            type="description"
+            class="modal__input"
+            placeholder="Explorer"
+            id="name"
+          />
         </form>
+        <button class="modal__button">Save</button>
       </div>
     </div>
     <script src="./scripts/index.js"></script>
