--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             id="name"
           />
           <input
-            type="description"
+            type="text"
             class="modal__input"
             placeholder="Explorer"
             id="name"
