--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <p class="footer__copyright">&#169;2022 Around The U.S.</p>
     </footer>
 
-    <div class="modal" id="profile-edit-modal">
+    <div class="modal modal__opened" id="profile-edit-modal">
       <div class="modal__container">
         <button class="modal__close" id="profile-close-button"></button>
         <p class="modal__heading">Edit Profile</p>
