--- a/index.html
+++ b/index.html
@@ -104,12 +104,9 @@
       <p class="footer__copyright">&#169;2022 Around The U.S.</p>
     </footer>
 
-    <div class="modal modal_opened" id="profile-edit-modal">
+    <div class="modal" id="profile-edit-modal">
       <div class="modal__container">
-        <button
-          class="modal__close modal_close"
-          id="profile-close-modal"
-        ></button>
+        <button class="modal__close" id="profile-close-modal"></button>
         <p class="modal__heading">Edit Profile</p>
         <form class="modal__form">
           <input
