--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
             name="title"
             class="modal__input"
             placeholder="Jacques Cousteau"
-            id="name"
+            id="profile-title-input"
           />
           <input
             type="text"
             class="modal__input"
             placeholder="Explorer"
-            id="name"
+            id="profile-description-input"
           />
           <button class="modal__button">Save</button>
         </form>
