--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <img src="" class="card__image" alt="" />
         <div class="card__description">
           <h2 class="card__title"></h2>
-          <button class="card__like-button" type="button"></button>
+          <button class="card__like-button card__like-button_active" type="button"></button>
         </div>
       </li>
     </template>
