--- a/index.html
+++ b/index.html
@@ -70,28 +70,28 @@
           <button class="modal__button">Save</button>
         </form>
       </div>
-
-      <div class="modal" id="profile-add-modal">
-        <div class="modal__container">
-          <button class="modal__close" id="profile-close-modal"></button>
-          <p class="modal__heading">New place</p>
-          <form class="modal__form">
-            <input
-              type="text"
-              name="title"
-              class="modal__input"
-              placeholder="Title"
-              id="profile-title-input"
-            />
-            <input
-              type="text"
-              class="modal__input"
-              placeholder="Image Link"
-              id="profile-description-input"
-            />
-            <button class="modal__add-button" id="add-button">Create</button>
-          </form>
-        </div>
+    </div>
+    <div class="modal" id="profile-add-modal">
+      <div class="modal__container">
+        <button class="modal__close" id="profile-close-modal"></button>
+        <p class="modal__heading">New place</p>
+        <form class="modal__form">
+          <input
+            type="text"
+            name="title"
+            class="modal__input"
+            placeholder="Title"
+            id="profile-title-input"
+          />
+          <input
+            type="text"
+            class="modal__input"
+            placeholder="Image Link"
+            id="profile-description-input"
+          />
+          <button class="modal__add-button" id="add-button">Create</button>
+        </form>
+      </div>
     </div>
 
     <template id="card-template">
@@ -99,7 +99,7 @@
         <img src="" class="card__image" alt="" />
         <div class="card__description">
           <h2 class="card__title"></h2>
-          <button class="card__like-button card__like-button_active" type="button"></button>
+          <button class="card__like-button" type="button"></button>
         </div>
       </li>
     </template>
