--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
             name="title"
             class="modal__input"
             placeholder="Title"
-            id="profile-title-input"
+            id="profile-location-input"
           />
           <input
             type="text"
             class="modal__input"
             placeholder="Image Link"
-            id="profile-description-input"
+            id="profile-link-input"
           />
           <button class="modal__add-button" id="add-button">Create</button>
         </form>
