--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="modal__container">
         <button class="modal__close" id="profile-close-modal"></button>
         <p class="modal__heading">Edit Profile</p>
-        <form class="modal__form">
+        <form class="modal__form" id="add-card-form">
           <input
             type="text"
             name="title"
