--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         <div class="card__description">
           <h2 class="card__title"></h2>
           <button class="card__like-button" type="button"></button>
+          <button class="card_delete-button" type="button"></button>
         </div>
       </li>
     </template>
